--- a/Alum/Alum.css
+++ b/Alum/Alum.css
@@ -7,10 +7,15 @@
     width: auto;
     text-align: center;
     padding: 15px;
-    border: 3px solid red;
+    border: 3px solid white;
+    border-radius: 5px;
 }
 
 img {
     max-width: 100%;
     height: auto;
+}
+
+body {
+    color: cadetblue
 }
