--- a/Alum/Alum.css
+++ b/Alum/Alum.css
@@ -4,14 +4,13 @@
 }
 
 #imageset {
-    width: auto;
+    width: 300px;
+    height: auto;
     text-align: center;
     padding: 15px;
     border: 3px solid white;
-    border-radius: 5px;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+    object-fit: cover;
 }
