--- a/Alum/Alum.css
+++ b/Alum/Alum.css
@@ -4,7 +4,7 @@
 }
 
 #imageset {
-    width: 300px;
+    width: 200px;
     height: auto;
     text-align: center;
     padding: 15px;
@@ -12,5 +12,5 @@
 }
 
 img {
-    object-fit: cover;
+    object-fit: contain;
 }
