--- a/Alum/Alum.css
+++ b/Alum/Alum.css
@@ -2,3 +2,12 @@
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+
+
+/* #imageset {
+    border-radius: 5px;
+    border-color: white;
+    border-width: 10px;
+    border-style: solid;
+    border
+} */
